# sourcery

./: Cargo.toml  README.md
sourcery-derive/: Cargo.toml
sourcery-derive/src/: lib.rs
src/: ast.rs  lex.rs  lib.rs  main.rs  parse.rs  print.rs  token.rs
src/ast/: attr.rs  expr.rs  item.rs  macros.rs  mod.rs  pat.rs  path.rs  stmt.rs  token.rs  ty.rs
src/parse/: attr.rs  expr.rs  glue.rs  item.rs  mod.rs  pat.rs  stmt.rs  ty.rs
src/passes/: minify.rs  mod.rs  style.rs
src/passes/style/: spaces.rs
tests/: fmt.rs  main.rs  minify.rs  pp.rs
tests/minify/: simple.min.rs  simple.rs
tests/pp/: expr.rs  nested-attr.rs
tests/pp/attributes/: attr-arb.rs  attr.rs  nested-attr.rs
tests/pp/const/: basic.rs
tests/pp/ty/: compound.rs  path.rs
tests/pp/visibility/: in-colon-colon-2.rs  in-colon-colon.rs
tests/style/: vis.fmt.rs  vis.rs
