[package]
name = "sourcery"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["sourcery-derive"]

[dependencies]
macro_rules_attribute = "0.2.2"
ra-ap-rustc_lexer = "0.119.0"
smol_str = "0.3.2"
sourcery-derive = { path = "sourcery-derive" }

[lib]
name = "sourcery"
path = "src/lib.rs"

[[bin]]
name = "sourcery"
path = "src/main.rs"

[[test]]
name = "pp"
path = "tests/main.rs"
harness = false

[dev-dependencies]
color-eyre = "0.6.5"
libtest-mimic = "0.8.1"
walkdir = "2.5.0"
